# inverse_kinematics

./: CMakeLists.txt  README.md  package.xml
config/: IK_parameters.yaml
include/inverse_kinematics/: inverse_kinematics.hpp  inverse_kinematics_basic.hpp
launch/: inv_kin.launch.py
src/: inverse_kinematics_basic_node.cpp
